@@ -105,7 +105,7 @@ pcap2cap_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la ${PC
 cap2pcap_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la ${PCAP_LIBS}
 capinfo_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la
 capdump_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la
-capfilter_LDADD = libcap_filter-07.la libcap_utils-07.la
+capfilter_LDADD = libcap_filter-07.la libcap_utils-07.la libcap_stream-07.la
 capmarker_LDADD = libcap_utils-07.la
 capshow_LDADD = libcap_filter-07.la libcap_utils-07.la libcap_stream-07.la
 
